<resources>
    <string name="app_name">Easy Exam</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>

    <string name="username_cannot_empty">Username cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="old_password_cannot_be_empty">Old Password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New Password cannot be empty</string>
    <string name="confirm_new_password_cannot_be_empty">Confirm New Password cannot be empty</string>
    <string name="password_must_be_same">Password must be same</string>
    <string name="new_password_must_be_different">New Password must be different</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="email_not_valid">Email must be valid</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="start_quiz">Start </string>
    <string name="rule">Rule</string>
    <string name="history">History</string>
    <string name="menu">Menu</string>
    <string name="quiz_option">Quiz Option</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="create">Create</string>
    <string name="save_password">Save Password</string>
    <string name="literature">Literature</string>
    <string name="geography">Geography</string>
    <string name="math">Math</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="final_result">Final Result</string>
    <string name="subject">Name :</string>
    <string name="correct">Correct :</string>
    <string name="incorrect">Incorrect :</string>
    <string name="earned">Earned :</string>
    <string name="total_questions">Total test :</string>
    <string name="overall_points">Overall Points :</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="literature_quiz">Literature Quiz</string>
    <string name="geography_quiz">Geography Quiz</string>
    <string name="date">Date :</string>
    <string name="start_again">Start Again!</string>
    <string name="code">Code :</string>

    <string name="rules1_description">
        The Quiz will contain 5 randomized questions.
    </string>
    <string name="rules2_description">
        Every correct answer scores you 5 points.
    </string>
    <string name="rules3_description">
        Every wrong answer deduct you 2 points.
    </string>
    <string name="rules4_description">
        Your results will be saved and will be accumulated in your history.
    </string>
    <string name="sign_up_with">Or sign up with</string>
    <string name="cant_import_file">"Can't import file "</string>
    <string name="craete_exam">Create An Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_exam">Name of exam</string>
    <string name="ok">OK</string>
    <string name="warning_name_empty">You must fill name of exam</string>
    <string name="add">Add question</string>
    <string name="qrcode">QR code</string>
    <string name="must_select">You must select answer to next question</string>
    <string name="enter_question">Enter question:</string>
    <string name="ans1"> A </string>
    <string name="ans2"> B </string>
    <string name="ans3"> C </string>
    <string name="ans4"> D </string>
    <string name="answer">Answer:</string>
    <string name="warning_empty">" You must fill in all the information"</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create_test">Create A Test</string>
    <string name="home_work">Home work</string>
    <string name="insert_exam_successfully">Test is save successfully</string>
    <string name="insert_exam_fail">Fail to add this test</string>

    <string name="name_exist">Fail to add this test</string>
    <string name="list_test">Created Exam</string>
    <string name="created_tests">List of tests</string>
    <string name="create_room">Create room</string>
    <string name="room_name">Room name: </string>
    <string name="hint_room_name">Enter room name</string>
    <string name="numOfUser">Number Of User: </string>
    <string name="select_test">Select a test: </string>
    <string name="set_time">Select test time (minute)</string>
    <string name="empty_test">No test exists</string>
    <string name="create_room_success">Create room successfully</string>
    <string name="create_room_fail">Create room fail</string>
    <string name="code_room">Code to join exam</string>
    <string name="seperate">---------- Or scan qr code ----------</string>
    <string name="join_exam">Join Exam</string>
    <string name="invalid_code">"Invalid code "</string>
    <string name="enter_code">Join test by code</string>
    <string name="hint_code_name">Enter code test</string>
    <string name="empty_code">You must enter  code</string>
    <string name="value">Value</string>
    <string name="examtest">Exam Test</string>
    <string name="previous">Prev</string>
    <string name="enter_image">Enter Image (optional)</string>
    <string name="invalid_user">Incorrect email or password</string>
    <string name="err">Some error</string>
    <string name="create_now">Create now\n</string>
    <string name="point">Point:</string>
    <string name="correct_question">Correct Question:\n</string>
    <string name="name_test">Test:\n</string>
    <string name="detail">About Test\n</string>
    <string name="accuracy">Accuracy</string>
    <string name="user">User</string>
    <string name="question">Question</string>
    <string name="statistical">Statistical</string>
    <string name="overall_point">Point</string>
    <string name="name_user">Name</string>
    <string name="tracking">Tracking user</string>
    <string name="notification">Notification</string>
    <string name="finish_exam">Test time is over.</string>
    <string name="early_end">The test hasn\'t ended yet. Do you want to end early?</string>
    <string name="cancel_exam">Do you want to cancel exam ?</string>
    <string name="empty_question">Nothing question is added.</string>
    <string name="cancel_adding_question">Do you want to cancel adding question?</string>
    <string name="delete_question">Do you want to delete this question ?</string>
    <string name="incorrect_id_room">Incorrect id room</string>
    <string name="request_fill">Please fill out information all field.</string>
    <string name="not_allow_to_view">You don\'t allow to view it.</string>
    <string name="export">Export file</string>
    <string name="view">Allow to View</string>
    <string name="not_allow_view">Not allow to view</string>
    <string name="welcome">Welcome</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <!--    <string name="name">Fail to add this test</string>-->

    <string-array name="option_choice_exam">
        <item>Import file</item>
        <item>Create exam normally</item>
    </string-array>

    <string-array name="option_choice_join_exam">
        <item>Scan QR code </item>
        <item>Type code</item>
    </string-array>
</resources>