<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:background="@drawable/custom_radius"
		android:padding="20dp"
		tools:viewBindingIgnore="true"
		xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
			android:id="@+id/dialog_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:textColor="@color/blue_black"
			android:text="@string/name_exam"
			android:textAppearance="@style/TextAppearance.DialogTitle" />

	<EditText
			android:padding="16dp"
			android:background="@drawable/bg_dg_name"
			android:id="@+id/input_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="14dp"
			android:textColor="@color/blue_black"
			android:imeOptions="actionDone"
			android:inputType="text"
			tools:text="Please allow!"
		/>



	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:layout_gravity="end"
			android:layout_marginTop="4dp"
			android:orientation="horizontal">

		<TextView
			android:id="@+id/dialog_negative_btn"
			style="@style/Widget.No.Dialog"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_small"
			android:paddingStart="@dimen/spacing_normal"
			android:paddingEnd="@dimen/spacing_normal"
			android:paddingLeft="@dimen/spacing_normal"
			android:paddingRight="@dimen/spacing_normal"
			android:text="@string/cancel" />

		<TextView
			style="@style/Widget.No.DialogPositive"
			android:id="@+id/dialog_positive_btn"
			android:textColor="#FFFFFFFF"
			android:background="@drawable/raised_button_background"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_small"
			android:textSize="@dimen/text_normal"
			android:paddingStart="@dimen/spacing_xnormal"
			android:paddingEnd="@dimen/spacing_xnormal"
			android:paddingLeft="@dimen/spacing_normal"
			android:paddingRight="@dimen/spacing_normal"
			android:text="@string/ok" />


	</LinearLayout>
</LinearLayout>
