<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.view.editexam.CreateTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_ar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/create_room"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/blue_black" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_app_ar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <!-- Number of Users -->

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/textViewRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_black"
            android:textSize="18dp"
            android:text="@string/room_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_room_name"
                android:imeOptions="actionNext"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewNumberOfUsers"
                android:textColor="@color/blue_black"
                android:textSize="18dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numOfUser" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_alignParentRight="true"
                android:id="@+id/textInputLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNumOfUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewTime"
                android:textColor="@color/blue_black"
                android:textSize="18dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_alignParentRight="true"
                android:id="@+id/textInputLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSelectTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewSelectTest"
                android:textColor="@color/blue_black"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_test" />

            <com.practice.easyexam.app.customview.CustomSpinner
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textViewSelectTest"
                android:id="@+id/spinnerTestSelection"
                android:background="@drawable/bg_spinner_down"
                android:popupBackground="@drawable/custom_dropdown_background"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:dropDownVerticalOffset="40dp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_ans_selected"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />
</RelativeLayout>


