<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.view.editexam.CreateExamNormalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_app_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_back"
                app:title="Create Exam"
                app:titleCentered="true"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/blue_black" />
        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_question"
                    android:textColor="@color/blue_black"
                    android:textSize="20dp"/>
                <EditText
                    android:padding="6dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/bg_edt"
                    android:layout_marginTop="12dp"
                    android:id="@+id/edtQuestion"
                    android:textSize="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    />

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_answer"
                    android:textColor="@color/blue_black"
                    android:textSize="20dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:padding="6dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bg_edt"
                        android:layout_marginTop="12dp"
                        android:id="@+id/edtAnswer1"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ans1"/>
                    <EditText
                        android:padding="6dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bg_edt"
                        android:layout_marginTop="12dp"
                        android:id="@+id/edtAnswer2"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ans2"/>
                    <EditText
                        android:padding="6dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bg_edt"
                        android:layout_marginTop="12dp"
                        android:id="@+id/edtAnswer3"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ans3"/>
                    <EditText
                        android:padding="6dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/bg_edt"
                        android:layout_marginTop="12dp"
                        android:id="@+id/edtAnswer4"
                        android:textSize="18dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ans4"/>
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer"
                        android:textColor="@color/blue_black"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/tvAns1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_ans_selected"
                        android:padding="10dp"
                        android:text="@string/ans1"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                    <TextView
                        android:padding="10dp"
                        android:id="@+id/tvAns2"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2"
                        android:textColor="@color/blue_black"
                        android:textSize="14dp"/>
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/tvAns3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans3"
                        android:textColor="@color/blue_black"
                        android:textSize="14dp"/>
                    <TextView
                        android:padding="10dp"
                        android:id="@+id/tvAns4"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4"
                        android:textColor="@color/blue_black"
                        android:textSize="14dp"/>


                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/btnSave"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_ans_selected"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/save"/>
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>